# library-brainmap

./: CMakeLists.txt  Doxygen  README.md  libacross.pc.in
config/: brainmap.pc.in
include/: across.hpp  across_impl.hpp  across_maze.hpp  brain_impl.hpp  brain_map.hpp  brain_maze.hpp
src/: across.cpp  main-test.cpp
test/: CMakeLists.txt  main-test.cpp  test1.cpp  test2.cpp  test3.cpp  test_header.h
test/mazes/: level-1.maze  level-10.maze  level-100.maze  level-101.maze  level-102.maze  level-103.maze  level-104.maze  level-105.maze  level-106.maze  level-107.maze  level-108.maze  level-109.maze  level-11.maze  level-110.maze  level-111.maze  level-112.maze  level-113.maze  level-114.maze  level-115.maze  level-116.maze  level-117.maze  level-118.maze  level-119.maze  level-12.maze  level-120.maze  level-121.maze  level-122.maze  level-123.maze  level-124.maze  level-125.maze  level-126.maze  level-127.maze  level-128.maze  level-129.maze  level-13.maze  level-130.maze  level-131.maze  level-132.maze  level-133.maze  level-134.maze  (+215 more)
